Clean up JS, add Help icon, update readme

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
 body {
-    text-align: center;
+	text-align: center;
+
+	/* Location of the image */
+	background-image: url(http://photos.shawnclover.com/Galleries/San-Francisco/i-6fnKrTH/0/X3/IMG_8835-X3.jpg);
+  
+	/* Background image is centered vertically and horizontally at all times */
+	background-position: center center;
+
+	/* Background image doesn't tile */
+	background-repeat: no-repeat;
+
+	/* Background image is fixed in the viewport so that it doesn't move when the content's height is greater than the image's height */
+	background-attachment: fixed;
+
+	/* This is what makes the background image rescale based on the container's size */
+	background-size: cover;
+
+	/* Set a background color that will be displayed while the background image is loading */
+	background-color: #464646;
+}
+
+img.info {
+	position:absolute;
+	right:50px;
+	bottom:50px;
+	z-index:1;
 }
